# bioc

./: .gitignore  CMakeLists.txt  README.md
samples/: CMakeLists.txt  bench.c  parsing_fasta.c  sample.fasta  sample.fq  sequences_example.c
src/: bioc.h  bioc_parsing_utils.c  bioc_parsing_utils.h  bioc_sequence.c  bioc_sequence.h  bioc_sequence_record.c  bioc_sequence_record.h  parsing_utils.c  parsing_utils.h  sequence.c  sequence.h  sequence_record.c  sequence_record.h
src/file_utils/: file_utils.c  file_utils.h
